# aqua-chat

./: .gitignore  Config.toml  README.md  build.sh
.circleci/: config.yml
.fluence/services/blueprint/: 75c809a5-4ccb-4491-8555-27ec34c5829c_blueprint.toml
artifacts/: history.ts  history.wasm  historyBs64.ts  sqlite.ts  sqlite3.wasm  user-list.wasm  userList.ts
browser2browser/: package-lock.json  package.json  webpack.config.js
browser2browser/src/: index.ts
client/: package-lock.json  package.json  webpack.config.js
client/src/: fluenceChat.ts  globalFunctions.ts  index.ts
demo/: package-lock.json  package.json
demo/src/: fluenceChat.ts  globalFunctions.ts  index.ts
history/: Cargo.toml
history/src/: main.rs  storage.rs
services/history/src/: errors.rs  service_api.rs  storage_api.rs
services/tests/: Cargo.toml  HistoryTestConfig.toml  UserListTestConfig.toml
services/tests/tests/: history.rs  user-list.rs
services/user-list/: Cargo.toml
services/user-list/src/: errors.rs  service_api.rs  storage_api.rs  user.rs
user-list/: Cargo.toml
user-list/src/: main.rs  service_api.rs  storage.rs  storage_api.rs  user.rs
